--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.6",
+    "date-fns": "^4.1.0",
     "next": "^15.3.2",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.6"
