--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@tailwindcss/postcss": "^4.1.6",
     "date-fns": "^4.1.0",
     "next": "^15.3.2",
-    "postcss": "^8.5.3",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.6"
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8"
   }
 }
