--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_JWT_COOKIE_NAME=_ka_au_fo_th_
 # 카카오맵
 NEXT_PUBLIC_KAKAO_MAP_KEY=01e9946fcf20493c466a249e0a77d49b
 
+NEXT_PUBLIC_TOSS_CLIENT_KEY=test_ck_kYG57Eba3GKGXvvxjjQ93pWDOxmA
