--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.514.0",
     "next": "^15.3.2",
     "quill": "^2.0.3",
     "react": "^19.1.0",
