--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/navermaps": "^3.9.0",
